--- a/jsprob/templates/jsprob/itog.html
+++ b/jsprob/templates/jsprob/itog.html
@@ -22,6 +22,9 @@
         <h5 class='centstr' style='color: #0000ff'> Этап 5. "Life hack"-Деление. </h5>
         <h5 class='rightstr' style='color: #0000ff'> {{lv5}} </h5>
 
+        <h5 class='centstr' style='color: #0000ff'> Этап 6. "Высший пилотаж". </h5>
+        <h5 class='rightstr' style='color: #0000ff'> {{lv6}} </h5>
+
         <h4 class='centstr'> ВСЕГО: </h4>
         <h4 class='rightstr'> {{su}} </h4>
 
