--- a/jsprob/templates/jsprob/priv.html
+++ b/jsprob/templates/jsprob/priv.html
@@ -4,7 +4,7 @@
 
 <aside>
     <h5 class="featuress" id = 'nomb' style="font-style: italic; font-size: max(20px, 2.5vw);"> Здравствуйте{{nm}}! </h5>
-    <h5 class="featuress" id = 'wait0' style="font-style: italic; font-size: max(17px, 2.2vw);"> III Турнир по устному счету уже начался! </h5>
+    <h5 class="featuress" id = 'wait0' style="font-style: italic; font-size: max(17px, 2.2vw);"> IV Турнир по устному счету уже начался! </h5>
     <h5 class="featuress" id = 'wait1' style="font-style: italic; font-size: max(14px, 2vw);"> Участвовать могут все: от мала до велика. </h5>
 </aside>
 
@@ -12,9 +12,9 @@
 
         <div class="column-left" style='{{st}}'>
           {% if fl1 == 1 %}
-             <h5 class='leftstr' style='color:blue; font-size: max(13px, 1.4vw)'> Лучшие результаты за последние дни: </h5>
+             <h5 class='leftstr' style='color:blue; font-size: max(13px, 1.4vw)'> Лидеры последних дней: </h5>
              {% for p in p1 %}
-             <h6 class='leftstr 'style='color:red; font-size: max(11px, 1.2vw)'> {{p}} </h6>
+             <h6 class='leftstr 'style='color:blue; font-size: max(11px, 1.2vw)'> {{p}} </h6>
              {% endfor %}
           {% else %}
              <h5 class='leftstr' style='color:blue; font-size: max(14px, 1.6vw)' align="left"> {{prit.0}} </h5>
@@ -63,15 +63,26 @@
 
 
 
-        <h4 style='font-size: max(16px, 1.8vw)'> Обращаем внимание на сроки турнира: с 10.10.2022 по 31.10.2022) </h4>
-        <!--<h4> Производится коррекция. Результат лукавых ТОП-ов будет удален.</h4>-->
-        <h4 style="color: red; font-size: max(16px, 1.8vw)"> ВНИМАНИЕ! </h4>
-        <h5 style='font-size: max(14px, 1.4vw)'> Если Вы неправильно внесли свои данные при регистрации и желаете сохранить свои достижения в ТОП-е, </h5>
-        <h5 style='font-size: max(14px, 1.4vw)'> <a href="https://vk.com/vovartus" target="_blank"> обозначьте свои истинные ФИО в ЛС </a> . Участники с некорректными ФИО(ФИК) удаляются! </h5>
-        <h5 style='font-size: max(14px, 1.4vw)'> Попыток по улучшению своего результата можно совершать неограниченное число раз. </h5>
-        <h5 style='font-size: max(14px, 1.4vw)'> Десять участников, занявшие первые места в ТОП-е игроков, получат символические вознаграждения: </h5>
-        <h5 style='font-size: max(14px, 1.4vw)'> 1-3е места – 200рублей, 4-10е места – 100р.</h5>
-        <h5 style='font-size: max(14px, 1.4vw)'> Окончательный итого будет подведен 31.10.2022 в 21:00 (по московскому времени) </h5>
+        <h4> Сроки турнира: 07.01.2023 по 28.01.2023 </h4>
+		<h4 style="color: red"> ВНИМАНИЕ! </h4>
+        <h5> Если Вы неправильно внесли свои данные при регистрации и желаете сохранить свои достижения в ТОП-е, </h5>
+        <h5> <a href="https://vk.com/vovartus" target="_blank"> обозначьте свои истинные ФИО в ЛС </a> . Участники с некорректными ФИО(ФИК) удаляются! </h5>
+        <h5> Попыток по улучшению своего результата можно совершать неограниченное число раз. </h5>
+        <h5> Десять участников, занявшие первые места в ТОП-е игроков, получат символические вознаграждения: </h5>
+        <h5> 1-3е места – 200рублей, 4-10е места – 100р. Кроме того: по 100р. получат те, кто попадет не менее 10 раз в ТОП-7 дня, </h5>
+        <h5> и по 200рублей, те кто не менее 5 раз станет лидером дня.</h5>
+        <h5> Окончательный итого будет подведен 28.01.2023 в 20:00 (по московскому времени) </h5>
+
+
+        <!--<h4> Производится коррекция. Результат лукавых ТОП-ов будет удален.</h4>
+        <h4 style="color: red"> ВНИМАНИЕ! </h4>
+        <h5> Если Вы неправильно внесли свои данные при регистрации и желаете сохранить свои достижения в ТОП-е, </h5>
+        <h5> <a href="https://vk.com/vovartus" target="_blank"> обозначьте свои истинные ФИО в ЛС </a> . Участники с некорректными ФИО(ФИК) удаляются! </h5>
+        <h5> Попыток по улучшению своего результата можно совершать неограниченное число раз. </h5>
+        <h5> Десять участников, занявшие первые места в ТОП-е игроков, получат символические вознаграждения: </h5>
+        <h5> 1-3е места – 200рублей, 4-10е места – 100р.</h5>
+        <h5> Для получения приза <a href="https://vk.com/vovartus?w=wall4764971_3676%2Fall" target="_blank"> смотрите комментарий к объявлению </a>  </h5>
+        <h5> Окончательный итого будет подведен 31.10.2022 в 21:00 (по московскому времени) </h5>-->
     </form>
     </div>
 
