--- a/jsprob/templates/jsprob/itoglv.html
+++ b/jsprob/templates/jsprob/itoglv.html
@@ -15,14 +15,14 @@
 
     <div class="features">
 
-         <h4> {{txt5}} </h4><br>
-         <h3> {{txt6}} </h3><br>
-         <h5> {{txt2}} </h5>
+         <h4 style='font-size: max(15px, 1.5vw)'> {{txt5}} </h4><br>
+         <h3 style='font-size: max(16px, 1.6vw)'> {{txt6}} </h3><br>
+         <h5 style='font-size: max(13px, 1.3vw)'> {{txt2}} </h5>
 
         {% if txtpz != '' %}
         </br></br></br>
-        <h2 style="font-style: italic; font-size: 24px; float: center;" > {{txt7}} </h2>
-        <h2 style="font-style: italic; font-size: 20px; float: right;" > {{txt8}} </h2>
+        <h2 style='font-size: max(15px, 1.5vw); font-style: italic' > {{txt7}} </h2>
+        <h2 style='font-size: max(13px, 1.3vw); float: right;' > {{txt8}} </h2>
         </br>
         {% endif %}
         </br>
