--- a/jsprob/templates/jsprob/list2.html
+++ b/jsprob/templates/jsprob/list2.html
@@ -6,8 +6,8 @@
  <h1 style="font-style: italic" id = 'vy4'> Вычислите:  </h1>
         <h2 style="font-style: italic; font-size: min(68px, 16vw);" id = 'prim'> </h2>
         <h2 style="font-style: italic; font-size: 72px; color: red" id = "err"> </h2>
-        <h3 style="font-style: italic" id = "end1"> </h3>
-        <h3 style="font-style: italic" id = "end2"> </h3>
+        <h3 style="font-style: italic; font-size: min(68px, 14vw); color: red" id = "end1"> </h3>
+        <h3 style="font-style: italic; font-size: min(68px, 14vw)" id = "end2"> </h3>
         <h3 style="font-style: italic" id = "end3"> </h3>
         <button class="btn btn-success btn" style="margin-top: 50px;" id = 'butt'  onclick="Funcend()"> ПРОДОЛЖИТЬ </button>
         <button class="btn btn-success btn-lg" style="margin:15px 15px 15px 15px; font-size: 36px;" id='btn1' onclick="Func1()"> &nbsp;1&nbsp; </button>
