--- a/jsprob/templates/jsprob/priv.html
+++ b/jsprob/templates/jsprob/priv.html
@@ -63,15 +63,15 @@
 
 
 
-        <h4> Сроки турнира: 07.01.2023 по 28.01.2023 </h4>
-		<h4 style="color: red"> ВНИМАНИЕ! </h4>
-        <h5> Если Вы неправильно внесли свои данные при регистрации и желаете сохранить свои достижения в ТОП-е, </h5>
-        <h5> <a href="https://vk.com/vovartus" target="_blank"> обозначьте свои истинные ФИО в ЛС </a> . Участники с некорректными ФИО(ФИК) удаляются! </h5>
-        <h5> Попыток по улучшению своего результата можно совершать неограниченное число раз. </h5>
-        <h5> Десять участников, занявшие первые места в ТОП-е игроков, получат символические вознаграждения: </h5>
-        <h5> 1-3е места – 200рублей, 4-10е места – 100р. Кроме того: по 100р. получат те, кто попадет не менее 10 раз в ТОП-7 дня, </h5>
-        <h5> и по 200рублей, те кто не менее 5 раз станет лидером дня.</h5>
-        <h5> Окончательный итого будет подведен 28.01.2023 в 20:00 (по московскому времени) </h5>
+        <h4 style='font-size: max(13px, 1.4vw)'> Сроки турнира: 07.01.2023 по 28.01.2023 </h4>
+		<h4 style="color: red; font-size: max(13px, 1.4vw)"> ВНИМАНИЕ! </h4>
+        <h5 style="font-size: max(12px, 1.2vw)"> Если Вы неправильно внесли свои данные при регистрации и желаете сохранить свои достижения в ТОП-е, </h5>
+        <h5 style="font-size: max(12px, 1.2vw)"> <a href="https://vk.com/vovartus" target="_blank"> обозначьте свои истинные ФИО в ЛС </a> . Участники с некорректными ФИО(ФИК) удаляются! </h5>
+        <h5 style="font-size: max(12px, 1.2vw)"> Попыток по улучшению своего результата можно совершать неограниченное число раз. </h5>
+        <h5 style="font-size: max(12px, 1.2vw)"> Десять участников, занявшие первые места в ТОП-е игроков, получат символические вознаграждения: </h5>
+        <h5 style="font-size: max(12px, 1.2vw)"> 1-3е места – 200рублей, 4-10е места – 100р. Кроме того: по 100р. получат те, кто попадет не менее 10 раз в ТОП-7 дня, </h5>
+        <h5 style="font-size: max(12px, 1.2vw)"> и по 200рублей, те кто не менее 5 раз станет лидером дня.</h5>
+        <h5 style="font-size: max(12px, 1.2vw)"> Окончательный итого будет подведен 28.01.2023 в 20:00 (по московскому времени) </h5>
 
 
         <!--<h4> Производится коррекция. Результат лукавых ТОП-ов будет удален.</h4>
