--- a/jsprob/templates/jsprob/topday.html
+++ b/jsprob/templates/jsprob/topday.html
@@ -34,9 +34,9 @@
         -->
         </br>
         <h3 id ='wt' style="font-style: italic"></h3>
-        <a href="{% url 'home' %}" id = 'butt1' class="btn btn-success" onclick="Func()"> СТАРТОВОЕ МЕНЮ </a>
-        <a href="{% url 'toplvl' %}" id = 'butt2' class="btn btn-success" onclick="Func()"> ТОП по этапам </a>
-        <a href="{% url 'toptab' %}" id = 'butt3' class="btn btn-success" onclick="Func()"> Общий ТОП </a>
+        <a style="font-size: max(13px, 1.3vw);"  href="{% url 'home' %}" id = 'butt1' class="btn btn-success" onclick="Func()"> СТАРТОВОЕ МЕНЮ </a>
+        <a style="font-size: max(13px, 1.3vw);" href="{% url 'toplvl' %}" id = 'butt2' class="btn btn-success" onclick="Func()"> ТОП по этапам </a>
+        <a style="font-size: max(13px, 1.3vw);" href="{% url 'toptab' %}" id = 'butt3' class="btn btn-success" onclick="Func()"> Общий ТОП </a>
         </br></br>
 
     </div>
