--- a/jsprob/templates/jsprob/instr.html
+++ b/jsprob/templates/jsprob/instr.html
@@ -26,6 +26,9 @@
     <h5> Примеры 5,6. Деление. </h5>
     <h5> 5) 915:3 = “900 содержит (по сумме) содержит 300 троек, 15 содержит 5 троек, следовательно” = 300 + 5 = 305. </h5>
     <h5> 6) 788:4 = ”Ближайшее `красивое` число кратное 4 – это 800, 800 содержит 200 четверок, в нашем числе на 3 четверки меньше, значит 788 содержит 197 четверок” = 200 - 3 = 197 </h5>
+    <h5> Примеры 6-го этапа. (Рассчитан на 7класс+. Здесь только подсказки) </h5>
+    <h5> 7) Необходимо вспомнить формулу разности квадратов: и слева направо, и справа налево. </h5>
+    <h5> 8) Также использовать: 25 = 100 / 4, 125 = 1000 / 8 и вспомнить распределительный закон умножения. </h5>
     <h5> Простите, за некоторую вольность в комментариях. </h5>
     <h5> Некоторые ленивые люди говорят, что можно быстро считать на калькуляторе … Можно. Однако, пройдя тренажер достаточное количество раз, можно научиться вычислять подобные примеры в уме, куда быстрее, чем набрать ряд необходимых цифр на калькуляторе. </h5>
     <h5> P.S. Не обновляйте и не переходите на предыдущую страницу браузера в момент прохождения этапов, это приведет к необходимости возвращаться в начальное меню. </h5>
