--- a/jsprob/templates/jsprob/list6.html
+++ b/jsprob/templates/jsprob/list6.html
@@ -4,10 +4,10 @@
 
     <div class="features">
         <h1 style="font-style: italic" id = 'vy4'> Вычислите:  </h1>
-        <h2 style="font-style: italic; font-size: min(68px, 12vw);" id = 'prim'> </h2>
+        <h2 style="font-style: italic; font-size: min(68px, 11vw);" id = 'prim'> </h2>
         <h2 style="font-style: italic; font-size: 72px; color: red" id = "err"> </h2>
-        <h3 style="font-style: italic" id = "end1"> </h3>
-        <h3 style="font-style: italic" id = "end2"> </h3>
+        <h3 style="font-style: italic; color: red; font-size: min(64px, 11vw); color: red" id = "end1"> </h3>
+        <h3 style="font-style: italic; font-size: min(64px, 11vw)" id = "end2"> </h3>
         <h3 style="font-style: italic" id = "end3"> </h3>
         <button class="btn btn-success btn" style="margin-top: 50px;" id = 'butt'  onclick="Funcend()"> РЕЗУЛЬТАТ </button>
         <h3 id = 'wait'> </h3>
