--- a/jsprob/templates/jsprob/toplvl.html
+++ b/jsprob/templates/jsprob/toplvl.html
@@ -46,9 +46,9 @@
         -->
         </br>
         <h3 id ='wt' style="font-style: italic"></h3>
-        <a href="{% url 'home' %}" id = 'butt1' class="btn btn-success" onclick="Func()"> СТАРТОВОЕ МЕНЮ </a>
-        <a href="{% url 'toptab' %}" id = 'butt2' class="btn btn-success" onclick="Func()"> Общий ТОП </a>
-        <a href="{% url 'topday' %}" id = 'butt3' class="btn btn-success" onclick="Func()"> ТОП ДНЯ </a>
+        <a style="font-size: max(13px, 1.3vw);" href="{% url 'home' %}" id = 'butt1' class="btn btn-success" onclick="Func()"> СТАРТОВОЕ МЕНЮ </a>
+        <a style="font-size: max(13px, 1.3vw);" href="{% url 'toptab' %}" id = 'butt2' class="btn btn-success" onclick="Func()"> Общий ТОП </a>
+        <a style="font-size: max(13px, 1.3vw);" href="{% url 'topday' %}" id = 'butt3' class="btn btn-success" onclick="Func()"> ТОП ДНЯ </a>
         </br></br>
     </div>
     <style>
