--- a/jsprob/templates/jsprob/uspreg.html
+++ b/jsprob/templates/jsprob/uspreg.html
@@ -8,7 +8,7 @@
         <h1 style="font-style: italic; font-size: max(28px, 3vw);"> ПОЗДРАВЛЯЕМ! </h1></br>
         <h2 style="font-style: italic; font-size: max(22px, 2.5vw);"> Вы успешно зарегистрированы </h2></br>
         <form action="" method="get">
-             <a href="{% url 'home' %}" class="btn btn-success"> ПЕРЕКРАСНО </a>
+             <a href="{% url 'home' %}" class="btn btn-success"> ПРЕКРАСНО </a>
         </form>
     </div>
 {% endblock %}
