--- a/jsprob/templates/jsprob/list1.html
+++ b/jsprob/templates/jsprob/list1.html
@@ -5,9 +5,9 @@
     <div class="features">
         <h1 style="font-style: italic" id = 'vy4'> Вычислите:  </h1>
         <h2 style="font-style: italic; font-size: min(68px, 16vw);" id = 'prim'> </h2>
-        <h2 style="font-style: italic; font-size: 72px; color: red" id = "err"> </h2>
-        <h3 style="font-style: italic; font-size: min(68px, 14vw); color: red" id = "end1"> </h3>
-        <h3 style="font-style: italic; font-size: min(68px, 14vw)" id = "end2"> </h3>
+        <h2 id = "err"> </h2>
+        <h3 id = "end1"> </h3>
+        <h3 id = "end2"> </h3>
         <h3 style="font-style: italic" id = "end3"> </h3>
         <button class="btn btn-success btn" style="margin-top: 50px;" id = 'butt'  onclick="Funcend()"> ПРОДОЛЖИТЬ </button>
         <button class="btn btn-success btn-lg" style="margin:15px 15px 15px 15px; font-size: 36px;" id='btn1' onclick="Func1()"> &nbsp;1&nbsp; </button>
@@ -101,11 +101,16 @@
                 if (po==2) {
                 document.getElementById('err').innerHTML = 'ОШИБКА';
                 document.getElementById('err').style.cssText = 'margin-top: 40px; font-style: italic; font-size: 62px; color: red;';
-                document.getElementById('end1').innerHTML = pr +'≠'+ot;
-                document.getElementById('end1').style.cssText = 'font-style: italic; font-size: 56px; color: red'
 
-                document.getElementById('end2').innerHTML = pr+'='+sr;
-                document.getElementById('end2').style.cssText = 'font-style: italic; font-size: 72px; color: blue'
+                razm = Math.floor(1100 / (pr.length + ot.length + 1))/10;
+                fs = 'font-size: min(64px, ' + razm + 'vw)';
+                document.getElementById('end1').innerHTML = pr + '≠' + ot;
+                document.getElementById('end1').style.cssText = 'font-style: italic; ' + fs + '; color: red'
+
+                razm = Math.floor(1400 / (pr.length + String(sr).length + 1))/10;
+                fs = 'font-size: min(76px, ' + razm + 'vw)';
+                document.getElementById('end2').innerHTML = pr + '=' + sr;
+                document.getElementById('end2').style.cssText = 'font-style: italic; ' + fs + '; color: blue'
                 }
                 if (po==1) {
                 document.getElementById('err').innerHTML = 'НЕВЕРНО';
