--- a/jsprob/templates/jsprob/toplvl.html
+++ b/jsprob/templates/jsprob/toplvl.html
@@ -14,7 +14,7 @@
                 <h3 style="font-style: italic"> Этап {{mass.0}}. </h3>
                 {% for mas in mass|slice:"1:" %}
 
-                     {% if mas.0 == '1' %}
+                     {% if mas.0 == 1 %}
                      <h6 class='leftstr'style='color:#AD1457'> {{mas.1}} </h6>
                      <h6 class='centstr'style='color:#AD1457'> {{mas.2}} </h6>
                      {% endif %}
