'TOP_TOPs_added'

--- a/jsprob/templates/jsprob/progress.html
+++ b/jsprob/templates/jsprob/progress.html
@@ -42,6 +42,7 @@
         <h3 id ='wt' style="font-style: italic"></h3>
         <a style="font-size: max(13px, 1.2vw);" href="{% url 'home' %}" id = 'butt1' class="btn btn-success" onclick="Func()"> СТАРТОВОЕ МЕНЮ </a>
         <a style="font-size: max(13px, 1.2vw);" href="{% url 'topglob' %}" id = 'butt2' class="btn btn-success" onclick="Func()"> АБСОЛЮТНЫЙ ТОП </a>
+        <a style="font-size: max(13px, 1.2vw);" href="{% url 'topdays' %}" id = 'butt3' class="btn btn-success" onclick="Func()"> ТОП ТОПов ДНЯ </a>
         </br></br>
 
     </div>
