--- a/jsprob/templates/jsprob/priv.html
+++ b/jsprob/templates/jsprob/priv.html
@@ -3,9 +3,9 @@
 {% block content %}
 
 <aside>
-    <h5 class="featuress" id = 'nomb' style="font-style: italic; font-size: max(20px, 2.5vw);"> Здравствуйте{{nm}}! </h5>
-    <h5 class="featuress" id = 'wait0' style="font-style: italic; font-size: max(17px, 2.2vw);"> IV Турнир по устному счету уже начался! </h5>
-    <h5 class="featuress" id = 'wait1' style="font-style: italic; font-size: max(14px, 2vw);"> Участвовать могут все: от мала до велика. </h5>
+    <h5 class="featuress" id = 'nomb' style="font-style: italic; font-size: min(35px, 4.5vw);"> Здравствуйте{{nm}}! </h5>
+    <h5 class="featuress" id = 'wait0' style="font-style: italic; font-size: min(32px, 3.7vw);"> Тренажер устного счета приветствует Вас! </h5>
+    <h5 class="featuress" id = 'wait1' style="font-style: italic; font-size: min(28px, 3.2vw);"> Участвовать могут все: от мала до велика. </h5>
 </aside>
 
     <div class="features">
@@ -63,18 +63,23 @@
 
 
 
-        <h4 style='font-size: max(13px, 1.4vw)'> Сроки турнира: 07.01.2023 по 28.01.2023 </h4>
+        <h4 style='font-size: max(13px, 1.4vw)'> Четвертый турнир окончен 28.01.2023 </h4>
+        <h4 style='font-size: max(13px, 1.4vw)'> ПОЗДРАВЛЯЕМ победителей и призеров! </h4>
+        <h5 style="font-size: max(12px, 1.2vw)"> Информацию по победителям, призерам и призам можно узнать в комментарии <a href="https://vk.com/vovartus?w=wall4764971_3685%2Fall" target="_blank"> к данному посту. </a> </h5>
 		<h4 style="color: red; font-size: max(13px, 1.4vw)"> ВНИМАНИЕ! </h4>
         <h5 style="font-size: max(12px, 1.2vw)"> Если Вы неправильно внесли свои данные при регистрации и желаете сохранить свои достижения в ТОП-е, </h5>
         <h5 style="font-size: max(12px, 1.2vw)"> <a href="https://vk.com/vovartus" target="_blank"> обозначьте свои истинные ФИО в ЛС </a> . Участники с некорректными ФИО(ФИК) удаляются! </h5>
         <h5 style="font-size: max(12px, 1.2vw)"> Попыток по улучшению своего результата можно совершать неограниченное число раз. </h5>
-        <h5 style="font-size: max(12px, 1.2vw)"> Десять участников, занявшие первые места в ТОП-е игроков, получат символические вознаграждения: </h5>
+        <h5 style="font-size: max(12px, 1.2vw)"> Следующий турнир запланирован на май 2023 года. Пока тренируйтесь. </h5>
+
+
+        <!--<h5 style="font-size: max(12px, 1.2vw)"> Десять участников, занявшие первые места в ТОП-е игроков, получат символические вознаграждения: </h5>
         <h5 style="font-size: max(12px, 1.2vw)"> 1-3е места – 200рублей, 4-10е места – 100р. Кроме того: по 100р. получат те, кто попадет не менее 10 раз в ТОП-7 дня, </h5>
         <h5 style="font-size: max(12px, 1.2vw)"> и по 200рублей, те кто не менее 5 раз станет лидером дня.</h5>
-        <h5 style="font-size: max(12px, 1.2vw)"> Окончательный итого будет подведен 28.01.2023 в 20:00 (по московскому времени) </h5>
 
 
-        <!--<h4> Производится коррекция. Результат лукавых ТОП-ов будет удален.</h4>
+
+        <h4> Производится коррекция. Результат лукавых ТОП-ов будет удален.</h4>
         <h4 style="color: red"> ВНИМАНИЕ! </h4>
         <h5> Если Вы неправильно внесли свои данные при регистрации и желаете сохранить свои достижения в ТОП-е, </h5>
         <h5> <a href="https://vk.com/vovartus" target="_blank"> обозначьте свои истинные ФИО в ЛС </a> . Участники с некорректными ФИО(ФИК) удаляются! </h5>
