--- a/jsprob/static/jsprob/css/jsprob.css
+++ b/jsprob/static/jsprob/css/jsprob.css
@@ -1,6 +1,16 @@
 body {
 }
 
+h1 {
+    font-style: italic;
+    font-size: min(55px, 4.5vw);
+    display: block;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+
+
 aside {
     float: up;
     background: #0d6efd;
