--- a/jsprob/templates/jsprob/list6.html
+++ b/jsprob/templates/jsprob/list6.html
@@ -22,7 +22,7 @@
         <button class="btn btn-success btn-lg" style="margin:15px 15px 15px 15px; font-size: 36px;" id='btn9' onclick="Func9()"> &nbsp;9&nbsp; </button></br>
         <button class="btn btn-success btn-lg" style="margin:15px 15px 15px 15px; font-size: 36px;" id='btn0' onclick="Funcm()"> &nbsp;-&nbsp; </button>
         <button class="btn btn-success btn-lg" style="margin:15px 15px 15px 15px; font-size: 36px;" id='btnm' onclick="Func0()"> &nbsp;0&nbsp; </button>
-        <button class="btn btn-success btn-lg" style="margin:15px 15px 15px 15px; font-size: 36px;" id='btnd' onclick="Funcd()"> &nbsp;<- </button></br></br>
+        <button class="btn btn-success btn-lg" style="margin:15px 15px 15px 15px; font-size: 36px;" id='btnd' onclick="Funcd()"> &nbsp;<- </button></br>
         <h2 style="font-style: italic" id = "prnpr"> </h2>
         <h2 style="font-style: italic" id = "timer"> </h2>
         <a href="{% url 'home' %}" id = "byni" class="btn btn-danger btn-sm"> ЗАВЕРШИТЬ! Перейти в главное меню. </a>
